<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_login_username"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_person_blue_grey_700_18dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_login_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_lock_blue_grey_700_18dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_bg_buttom"
        android:text="@string/login"
        android:textColor="#ffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/register"
            android:gravity="center_vertical"
            android:textColor="#F20B5F94"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>