<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CalculateDutyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:alpha="0.9"
                android:paddingRight="15dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_bg_buttom"
                android:onClick="onLogoutClick"
                android:text="@string/logout"
                android:textColor="#ffff" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/etFOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fob"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/etFreight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/freight"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/exchange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hscode" />
            <AutoCompleteTextView
                android:id="@+id/acHsCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:minHeight="40dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="14dp"
                android:background="@drawable/bg_spinner"
                android:hint="HS code search here"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete|textAutoCorrect" />
            <TextView
                android:id="@+id/HSCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/hsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/horizontalLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/hsImportDuty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <TextView
                    android:id="@+id/hsVAT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="" />
            </LinearLayout>

            <Spinner
                android:visibility="gone"
                android:id="@+id/spHscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="@drawable/bg_spinner"
                android:minHeight="40dp" />


            <Button
                android:id="@+id/calculate_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/blue_bg_buttom"
                android:onClick="onButtonClick"
                android:text="@string/calculate"
                android:textColor="#ffff" />

            <TextView
                android:id="@+id/tvCalculateDuty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text=""
                android:textColor="#85aa0000"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>